2017-03-14  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r213953. rdar://problem/31049771

    2017-03-14  Andy Estes  <aestes@apple.com>

            Update ApplePaySession.html after r213949

            Rubber-stamped by Beth Dakin.

            * http/tests/ssl/applepay/ApplePaySession-expected.txt:
            * http/tests/ssl/applepay/ApplePaySession.html:

2017-03-03  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r213253. rdar://problem/30773140

    2017-03-01  Chris Dumez  <cdumez@apple.com>

            [WK2][!NETWORK_SESSION] Failure to download when using a download attribute with no value on an anchor
            https://bugs.webkit.org/show_bug.cgi?id=169060
            <rdar://problem/30773140>

            Reviewed by Darin Adler.

            Add layout test coverage.

            * http/tests/download/anchor-download-no-value-expected.txt: Added.
            * http/tests/download/anchor-download-no-value.html: Added.

2017-03-03  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r213385. rdar://problem/30838985

    2017-03-03  Sam Weinig  <sam@webkit.org>

            REGRESSION (r209760): Apple Pay doesn't work on casper.com, shopspring.com, maybe other sites
            <rdar://problem/30313445>
            https://bugs.webkit.org/show_bug.cgi?id=169149

            Reviewed by Simon Fraser.

            * http/tests/ssl/applepay/ApplePaySession-expected.txt:
            * http/tests/ssl/applepay/ApplePaySession.html:
            Update test for relaxed ApplePayShippingMethod sequence requirements.

2017-03-03  Matthew Hanson  <matthew_hanson@apple.com>

        Rollout r213374. rdar://problem/30773140

2017-03-03  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r213253. rdar://problem/30773140

    2017-03-01  Chris Dumez  <cdumez@apple.com>

            [WK2][!NETWORK_SESSION] Failure to download when using a download attribute with no value on an anchor