@@ -13,14 +13,12 @@ Verifies that 2D canvases with higher than 5120x2880 resolution don't create acc
           (position 8.00 50.00)
           (bounds 512.00 288.00)
           (drawsContent 1)
-          (acceleratesDrawing 1)
         )
         (GraphicsLayer
           (position 8.00 342.00)
           (bounds 5120.00 2880.00)
           (usingTiledLayer 1)
           (drawsContent 1)
-          (acceleratesDrawing 1)
         )
         (GraphicsLayer
           (position 8.00 3226.00)
