@@ -19,5 +19,4 @@ PASS Cross-origin Window accessors get local Function.prototype
 PASS Same-origin observers get different functions for cross-origin objects 
 PASS Same-origin observers get different accessors for cross-origin Window 
 PASS Same-origin observers get different accessors for cross-origin Location 
-FAIL {}.toString.call() does the right thing on cross-origin objects assert_equals: expected "[object Object]" but got "[object Window]"
  
