@@ -616,4 +616,5 @@ webkit.org/b/165392 [ ElCapitan Release ] imported/mathml-in-html5/mathml/presen
 webkit.org/b/166765 [ Debug ] http/tests/pointer-lock/iframe-sandboxed-nested-allow-pointer-lock.html [ Crash ]
 webkit.org/b/166765 [ Debug ] http/tests/pointer-lock/pointerlockelement-same-origin.html [ Crash ]
 webkit.org/b/166765 [ Debug ] pointer-lock/lock-lost-on-alert.html [ Crash ]
+webkit.org/b/167965 pointer-lock/mouse-event-delivery.html [ Pass Failure ]
 
