@@ -1,3 +1,9 @@
+2017-03-16  Ryan Haddad  <ryanhaddad@apple.com>
+
+        Unreviewed test gardening.
+
+        * web-platform-tests/html/browsers/origin/cross-origin-objects/cross-origin-objects-expected.txt:
+
 2017-02-09  Matthew Hanson  <matthew_hanson@apple.com>
 
         Merge r211913. rdar://problem/28062149
